<!--
 Copyright 2009 Google Inc.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
  >
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.google.javascript</groupId>
  <artifactId>closure-compiler-parent</artifactId>
  <packaging>pom</packaging>

  <name>Closure Compiler Parent</name>
  <version>1.0-SNAPSHOT</version>

  <url>https://github.com/google/closure-compiler/</url>
  <description>
    Closure Compiler is a JavaScript optimizing compiler. It parses your
    JavaScript, analyzes it, removes dead code and rewrites and minimizes
    what's left. It also checks syntax, variable references, and types, and
    warns about common JavaScript pitfalls. It is used in many of Google's
    JavaScript apps, including Gmail, Google Web Search, Google Maps, and
    Google Docs.
  </description>
  <inceptionYear>2009</inceptionYear>

  <prerequisites>
    <maven>2.2.1</maven>
  </prerequisites>

  <scm>
    <connection>
      scm:git:https://github.com/google/closure-compiler.git
    </connection>
    <developerConnection>
      scm:git:git@github.com:google/closure-compiler.git
    </developerConnection>
    <url>
      https://github.com/google/closure-compiler
    </url>
  </scm>

  <issueManagement>
    <system>code.google.com</system>
    <url>http://github.com/google/closure-compiler/issues</url>
  </issueManagement>

  <organization>
    <name>Google</name>
    <url>http://www.google.com</url>
  </organization>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <!--
    TODO: test deployment without this parent.
    http://central.sonatype.org/pages/apache-maven.html#deprecated-oss-parent says

    > In the past all the plugin configuration and other setup was
    > managed by a Maven parent POM with the latest coordinates of
    > org.sonatype.oss:oss-parent:9. This project leaked SCM, URL and
    > other details and its usage is discouraged. Maintenance of the
    > project has stopped and it no longer works with latest tooling
    > such as Maven versions or Java versions.

    It may be sufficient to include a <distributionManagement> per
    http://central.sonatype.org/pages/apache-maven.html#distribution-management-and-authentication
  -->
  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>9</version>
  </parent>

  <modules>
    <module>externs/pom.xml</module>
    <module>pom-main.xml</module>
  </modules>

  <developers>
    <developer>
      <id>johnlenz</id>
      <name>John Lenz</name>
      <email>concavelenz@gmail.com</email>
    </developer>
    <developer>
      <id>nicksantos</id>
      <name>Nick Santos</name>
      <email>nicholas.j.santos@gmail.com</email>
    </developer>

    <developer>
      <id>acleung</id>
      <name>Alan Leung</name>
    </developer>

    <developer>
      <id>mbolin</id>
      <name>Michael Bolin</name>
      <email>mbolin@alum.mit.edu</email>
    </developer>

    <developer>
      <id>plindner</id>
      <name>Paul Lindner</name>
      <email>lindner@inuus.com</email>
    </developer>

    <developer>
      <id>ckillingsworth</id>
      <name>Chad Killingsworth</name>
      <email>chadkillingsworth@gmail.com</email>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
    <jdk.version>1.8</jdk.version>
    <junit.version>4.12</junit.version>
    <guava.version>25.1-jre</guava.version>
    <protobuf.version>3.11.1</protobuf.version>
  </properties>

  <build>
    <defaultGoal>install</defaultGoal>
    <pluginManagement>
      <!-- set versions/conf of common plugins for reproducibility, ordered alphabetically by owner -->
      <plugins>
        <plugin>
          <groupId>org.apache.felix</groupId>
          <artifactId>maven-bundle-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.8</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.5.1</version>
          <configuration>
            <source>${jdk.version}</source>
            <target>${jdk.version}</target>
            <showDeprecation>true</showDeprecation>
            <compilerArgument>-Xlint:unchecked,deprecation,fallthrough,finally</compilerArgument>
            <fork>true</fork>
            <encoding>${project.build.sourceEncoding}</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>1.12</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.19.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.10.4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.0.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-report-plugin</artifactId>
          <version>2.19.1</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava-gwt</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava-testlib</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.protobuf</groupId>
        <artifactId>protobuf-java</artifactId>
        <version>${protobuf.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <profiles>
    <profile>
      <id>parallel-test</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <forkCount>1C</forkCount>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
